# aws-sdk-cpp-examples

./: .gitignore
KinesisFirehoseExample/: CMakeLists.txt  main.cpp
